PPL/assignment1/target/CSlangParser.py
# Generated from main/CSlang/parser/CSlang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'if'", "'else'", 
                     "'for'", "'true'", "'false'", "'int'", "'float'", "'bool'", 
                     "'string'", "'return'", "'null'", "'class'", "'constructor'", 
                     "'var'", "'self'", "'new'", "'void'", "'const'", "'func'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "':='", "'^'", "<INVALID>", "'%'", "'.'", "','", 
                     "';'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSE", "FOR", 
                      "TRUE", "FALSE", "INT", "FLOAT", "BOOL", "STRING", 
                      "RETURN", "NULL", "CLASS", "CONSTRUCTOR", "VAR", "SELF", 
                      "NEW", "VOID", "CONST", "FUNC", "PLUS", "MINUS", "MUL", 
                      "DIV", "BSLASH", "NOT", "AND", "OR", "EQUAL", "EQ", 
                      "DIF", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "ASSIGN", "CONCAT", "NEWOP", "MOD", "DOT", "COMMA", 
                      "SEMICO", "COLON", "OPENCC", "CLOSECC", "OPENSQ", 
                      "CLOSESQ", "OPENBR", "CLOSEBR", "LINE_CMT", "BLOCK_CMT", 
                      "At", "ID", "INTLIT", "FLOATLIT", "STRINGLIT", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_dec = 1
    RULE_super_part = 2
    RULE_member = 3
    RULE_attribute = 4
    RULE_id_list = 5
    RULE_expressions_list = 6
    RULE_method = 7
    RULE_method_dec = 8
    RULE_parameter_list = 9
    RULE_parameter = 10
    RULE_method_con = 11
    RULE_at_type = 12
    RULE_func_type = 13
    RULE_array_type = 14
    RULE_expressions = 15
    RULE_expr = 16
    RULE_expr1 = 17
    RULE_expr2 = 18
    RULE_expr3 = 19
    RULE_expr4 = 20
    RULE_expr5 = 21
    RULE_expr6 = 22
    RULE_expr7 = 23
    RULE_expr8 = 24
    RULE_expr9 = 25
    RULE_expr10 = 26
    RULE_expr_list = 27
    RULE_statement = 28
    RULE_vardec_statement = 29
    RULE_assign_statement = 30
    RULE_if_statement = 31
    RULE_for_statement = 32
    RULE_for_condition = 33
    RULE_break_statement = 34
    RULE_continue_statement = 35
    RULE_method_statement = 36
    RULE_return_statement = 37
    RULE_block_statement = 38
    RULE_arraylit = 39
    RULE_litlist = 40
    RULE_literal = 41
    RULE_iden = 42
    RULE_boollit = 43

    ruleNames =  [ "program", "class_dec", "super_part", "member", "attribute", 
                   "id_list", "expressions_list", "method", "method_dec", 
                   "parameter_list", "parameter", "method_con", "at_type", 
                   "func_type", "array_type", "expressions", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "expr9", "expr10", "expr_list", "statement", 
                   "vardec_statement", "assign_statement", "if_statement", 
                   "for_statement", "for_condition", "break_statement", 
                   "continue_statement", "method_statement", "return_statement", 
                   "block_statement", "arraylit", "litlist", "literal", 
                   "iden", "boollit" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSE=4
    FOR=5
    TRUE=6
    FALSE=7
    INT=8
    FLOAT=9
    BOOL=10
    STRING=11
    RETURN=12
    NULL=13
    CLASS=14
    CONSTRUCTOR=15
    VAR=16
    SELF=17
    NEW=18
    VOID=19
    CONST=20
    FUNC=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    BSLASH=26
    NOT=27
    AND=28
    OR=29
    EQUAL=30
    EQ=31
    DIF=32
    LESS=33
    LESS_EQUAL=34
    GREATER=35
    GREATER_EQUAL=36
    ASSIGN=37
    CONCAT=38
    NEWOP=39
    MOD=40
    DOT=41
    COMMA=42
    SEMICO=43
    COLON=44
    OPENCC=45
    CLOSECC=46
    OPENSQ=47
    CLOSESQ=48
    OPENBR=49
    CLOSEBR=50
    LINE_CMT=51
    BLOCK_CMT=52
    At=53
    ID=54
    INTLIT=55
    FLOATLIT=56
    STRINGLIT=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def class_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_decContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_decContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.CLASS:
                self.state = 88
                self.class_dec()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def OPENBR(self):
            return self.getToken(CSlangParser.OPENBR, 0)

        def CLOSEBR(self):
            return self.getToken(CSlangParser.CLOSEBR, 0)

        def super_part(self):
            return self.getTypedRuleContext(CSlangParser.Super_partContext,0)


        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.MemberContext)
            else:
                return self.getTypedRuleContext(CSlangParser.MemberContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dec" ):
                return visitor.visitClass_dec(self)
            else:
                return visitor.visitChildren(self)




    def class_dec(self):

        localctx = CSlangParser.Class_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(CSlangParser.CLASS)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 97
                self.super_part()


            self.state = 100
            self.match(CSlangParser.ID)
            self.state = 101
            self.match(CSlangParser.OPENBR)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSlangParser.VAR) | (1 << CSlangParser.CONST) | (1 << CSlangParser.FUNC))) != 0):
                self.state = 102
                self.member()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(CSlangParser.CLOSEBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Super_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def LESS(self):
            return self.getToken(CSlangParser.LESS, 0)

        def MINUS(self):
            return self.getToken(CSlangParser.MINUS, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_super_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuper_part" ):
                return visitor.visitSuper_part(self)
            else:
                return visitor.visitChildren(self)




    def super_part(self):

        localctx = CSlangParser.Super_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_super_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(CSlangParser.ID)
            self.state = 111
            self.match(CSlangParser.LESS)
            self.state = 112
            self.match(CSlangParser.MINUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(CSlangParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(CSlangParser.MethodContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = CSlangParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.VAR, CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.attribute()
                pass
            elif token in [CSlangParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(CSlangParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def SEMICO(self):
            return self.getToken(CSlangParser.SEMICO, 0)

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def EQ(self):
            return self.getToken(CSlangParser.EQ, 0)

        def expressions_list(self):
            return self.getTypedRuleContext(CSlangParser.Expressions_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = CSlangParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==CSlangParser.VAR or _la==CSlangParser.CONST):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 119
            self.id_list()
            self.state = 120
            self.match(CSlangParser.COLON)
            self.state = 121
            self.at_type()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSlangParser.EQ:
                self.state = 122
                self.match(CSlangParser.EQ)
                self.state = 123
                self.expressions_list()


            self.state = 126
            self.match(CSlangParser.SEMICO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.IdenContext)
            else:
                return self.getTypedRuleContext(CSlangParser.IdenContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = CSlangParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.iden()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 129
                self.match(CSlangParser.COMMA)
                self.state = 130
                self.iden()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressions_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ExpressionsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_expressions_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressions_list" ):
                return visitor.visitExpressions_list(self)
            else:
                return visitor.visitChildren(self)




    def expressions_list(self):

        localctx = CSlangParser.Expressions_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressions_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.expressions()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 137
                self.match(CSlangParser.COMMA)
                self.state = 138
                self.expressions()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_dec(self):
            return self.getTypedRuleContext(CSlangParser.Method_decContext,0)


        def method_con(self):
            return self.getTypedRuleContext(CSlangParser.Method_conContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = CSlangParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.method_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.method_con()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def iden(self):
            return self.getTypedRuleContext(CSlangParser.IdenContext,0)


        def OPENCC(self):
            return self.getToken(CSlangParser.OPENCC, 0)

        def CLOSECC(self):
            return self.getToken(CSlangParser.CLOSECC, 0)

        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def func_type(self):
            return self.getTypedRuleContext(CSlangParser.Func_typeContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(CSlangParser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(CSlangParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_dec" ):
                return visitor.visitMethod_dec(self)
            else:
                return visitor.visitChildren(self)




    def method_dec(self):

        localctx = CSlangParser.Method_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(CSlangParser.FUNC)
            self.state = 149
            self.iden()
            self.state = 150
            self.match(CSlangParser.OPENCC)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSlangParser.At or _la==CSlangParser.ID:
                self.state = 151
                self.parameter_list()


            self.state = 154
            self.match(CSlangParser.CLOSECC)
            self.state = 155
            self.match(CSlangParser.COLON)
            self.state = 156
            self.func_type()
            self.state = 157
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ParameterContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = CSlangParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.parameter()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSlangParser.COMMA:
                self.state = 160
                self.match(CSlangParser.COMMA)
                self.state = 161
                self.parameter()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self):
            return self.getTypedRuleContext(CSlangParser.IdenContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = CSlangParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.iden()
            self.state = 168
            self.match(CSlangParser.COLON)
            self.state = 169
            self.at_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_conContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def CONSTRUCTOR(self):
            return self.getToken(CSlangParser.CONSTRUCTOR, 0)

        def OPENCC(self):
            return self.getToken(CSlangParser.OPENCC, 0)

        def CLOSECC(self):
            return self.getToken(CSlangParser.CLOSECC, 0)

        def block_statement(self):
            return self.getTypedRuleContext(CSlangParser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(CSlangParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_con

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_con" ):
                return visitor.visitMethod_con(self)
            else:
                return visitor.visitChildren(self)




    def method_con(self):

        localctx = CSlangParser.Method_conContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_method_con)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(CSlangParser.FUNC)
            self.state = 172
            self.match(CSlangParser.CONSTRUCTOR)
            self.state = 173
            self.match(CSlangParser.OPENCC)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSlangParser.At or _la==CSlangParser.ID:
                self.state = 174
                self.parameter_list()


            self.state = 177
            self.match(CSlangParser.CLOSECC)
            self.state = 178
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class At_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CSlangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CSlangParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(CSlangParser.STRING, 0)

        def BOOL(self):
            return self.getToken(CSlangParser.BOOL, 0)

        def array_type(self):
            return self.getTypedRuleContext(CSlangParser.Array_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_at_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAt_type" ):
                return visitor.visitAt_type(self)
            else:
                return visitor.visitChildren(self)




    def at_type(self):

        localctx = CSlangParser.At_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_at_type)
        try:
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(CSlangParser.INT)
                pass
            elif token in [CSlangParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(CSlangParser.FLOAT)
                pass
            elif token in [CSlangParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.match(CSlangParser.STRING)
                pass
            elif token in [CSlangParser.BOOL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.match(CSlangParser.BOOL)
                pass
            elif token in [CSlangParser.OPENSQ]:
                self.enterOuterAlt(localctx, 5)
                self.state = 184
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def at_type(self):
            return self.getTypedRuleContext(CSlangParser.At_typeContext,0)


        def VOID(self):
            return self.getToken(CSlangParser.VOID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_func_type
